# ECC

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  make_cocoalib.sh
include/: utils.H
include/ecc/: bch.H  golay.H  ham.H  linear.H  rm.H
include/fuzzy/: fuzzy.H
include/types/: cyclic.H  linear.H
include/util/: utils.H
src/BCH/: bch.C  test.C
src/Golay/: golay.C
src/Ham/: ham.C
src/RM/: rm.C
src/RS/: test.C
src/fuzzy/: fuzzy.C
src/test/: ecc_test.C  fuzzy_test.C  test.C
src/types/: cyclic.C  linear.C
src/util/: utils.C
